# CellularAutomata

./: CMakeLists.txt  README.md
src/: CellularAutomaton.cpp  CellularAutomaton.hpp  main.cpp
